Fix sidebar margins and dark mode styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -75,13 +75,8 @@ body {
 }
 
 .sidebar {
-  margin-top: 63px;
   min-height: 100vh;
   overflow: auto;
-}
-
-.main-content {
-  margin-top: 63px;
 }
 
 #jumbotron {
